# city-spellcheck

./: .travis.yml  Cargo.toml  README.md
benches/: my_benchmark.rs
data/: cities_canada-usa-filtered.csv  cities_canada-usa-filtered.tsv
docs/: aliases.js  search-index.js  source-files.js
docs/ascii/: all.html  enum.AsciiChar.html  fn.caret_decode.html  fn.caret_encode.html  index.html  struct.AsAsciiStrError.html  struct.AsciiStr.html  struct.AsciiString.html  struct.FromAsciiError.html  struct.Lines.html  struct.ToAsciiCharError.html  trait.AsAsciiStr.html  trait.AsMutAsciiStr.html  trait.IntoAsciiString.html  trait.ToAsciiChar.html  type.Chars.html  type.CharsMut.html
docs/byteorder/: enum.BigEndian.html  enum.LittleEndian.html
docs/bytes/: enum.BigEndian.html  enum.LittleEndian.html  trait.ByteOrder.html
docs/city_spellcheck/: CityData.t.html  FuzzyResult.t.html  USState.t.html  all.html  enum.CAProvince.html  enum.CATerritory.html  enum.Country.html  enum.Region.html  enum.USState.html  index.html  sidebar-items.js  struct.City.html  struct.CityData.html  struct.Coordinate.html  struct.FuzzyResult.html
docs/combine/: all.html  fn.any.html  fn.attempt.html  fn.between.html  fn.chainl1.html  fn.chainr1.html  fn.choice.html  fn.count.html  fn.count_min_max.html  fn.env_parser.html  fn.eof.html  fn.from_str.html  fn.look_ahead.html  fn.many.html  fn.many1.html  fn.none_of.html  fn.not_followed_by.html  fn.one_of.html  fn.optional.html  fn.parser.html  fn.position.html  fn.satisfy.html  fn.satisfy_map.html  fn.try.html  (+27 more)
src/: countries.rs  lib.rs  regions.rs
(+1156 files in other folders)
