[package]
name = "city-spellcheck"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
distance = "0.4.0"
serde_derive = "1.0.84"
serde = "1.0.84"
lazy_static = "1.1.0"
redis = "0.9.1"
sift4 = "0.1.2"

[dev-dependencies]
criterion = "0.2.7"

[[bench]]
name = "my_benchmark"
harness = false
